Add superuser support (ALPHA version)
1)Add interface ExFile and two subclass - StdFile and ShellFile. Replace
all usages of File to ExFile - single interface
2)Fix toast - check if thread is UI
3)Add library RootTools
4)Add class SmartCommand and subclass - for command ls, mkdir, mv.
5)Bookmark manager - replace intent-based call to direct
6)Async work with files
7)Feature "copy full path"
8)Option - change mode (Java API or busybox)
9)Add common class Consumer<Type>, RegExp.find, ObjectUtils, ThreadUtils
10)Add to direlement.xml - special field for view permissions
11)Add new button "input and navigate"
12)Delete feature "add new file"